--- a/tools/tojs/cocos2dx_extension.ini
+++ b/tools/tojs/cocos2dx_extension.ini
@@ -7,7 +7,7 @@ prefix = cocos2dx_extension
 # all classes will be embedded in that namespace
 target_namespace = cc
 
-android_headers = -I%(androidndkdir)s/platforms/android-14/arch-arm/usr/include -I%(androidndkdir)s/sources/cxx-stl/gnu-libstdc++/4.7/libs/armeabi-v7a/include -I%(androidndkdir)s/sources/cxx-stl/gnu-libstdc++/4.7/include -I%(androidndkdir)s/sources/cxx-stl/gnu-libstdc++/4.8/libs/armeabi-v7a/include -I%(androidndkdir)s/sources/cxx-stl/gnu-libstdc++/4.8/include
+android_headers = -I%(androidndkdir)s/platforms/android-14/arch-arm/usr/include -I%(androidndkdir)s/sources/cxx-stl/gnu-libstdc++/4.8/libs/armeabi-v7a/include -I%(androidndkdir)s/sources/cxx-stl/gnu-libstdc++/4.8/include -I%(androidndkdir)s/sources/cxx-stl/gnu-libstdc++/4.9/libs/armeabi-v7a/include -I%(androidndkdir)s/sources/cxx-stl/gnu-libstdc++/4.9/include
 android_flags = -D_SIZE_T_DEFINED_ 
 
 clang_headers = -I%(clangllvmdir)s/lib/clang/%(clang_version)s/include 
@@ -49,7 +49,7 @@ skip = ScrollView::[(g|s)etDelegate$],
         ActionObject::[initWithDictionary],
         Manifest::[getAssets],
         AssetsManagerEx::[getFailedAssets updateAssets],
-        EventListenerAssetsManagerEx::[create init]
+        EventListenerAssetsManagerEx::[create]
 
 rename_functions =
 
