copy the audio engine for windows to linux

--- a/cocos/CMakeLists.txt
+++ b/cocos/CMakeLists.txt
@@ -107,7 +107,7 @@ if(WINDOWS)
     list(APPEND PLATFORM_SPECIFIC_LIBS shlwapi version)
   endif()
 elseif(LINUX)
-  foreach(_pkg OPENGL GLEW GLFW3 FMOD FONTCONFIG THREADS GTK3)
+  foreach(_pkg OPENGL GLEW GLFW3 FONTCONFIG THREADS GTK3 VORBIS MPG123 OPENAL)
     cocos_use_pkg(cocos2dInternal ${_pkg})
   endforeach()
 elseif(MACOSX OR APPLE)
