Adding Windows to the desktop audio engine

--- a/cocos/2d/libcocos2d.vcxproj
+++ b/cocos/2d/libcocos2d.vcxproj
@@ -397,11 +397,10 @@ xcopy /Y /Q "$(ProjectDir)..\..\external\chipmunk\prebuilt\win32\release-lib\*.*
     <ClCompile Include="..\3d\CCSprite3DMaterial.cpp" />
     <ClCompile Include="..\3d\CCTerrain.cpp" />
     <ClCompile Include="..\audio\AudioEngine.cpp" />
-    <ClCompile Include="..\audio\win32\AudioCache.cpp" />
-    <ClCompile Include="..\audio\win32\AudioEngine-win32.cpp" />
-    <ClCompile Include="..\audio\win32\AudioPlayer.cpp" />
-    <ClCompile Include="..\audio\win32\MciPlayer.cpp" />
-    <ClCompile Include="..\audio\win32\SimpleAudioEngine.cpp" />
+    <ClCompile Include="..\audio\desktop\AudioCache.cpp" />
+    <ClCompile Include="..\audio\desktop\AudioEngine-desktop.cpp" />
+    <ClCompile Include="..\audio\desktop\AudioPlayer.cpp" />
+    <ClCompile Include="..\audio\desktop\SimpleAudioEngine.cpp" />
     <ClCompile Include="..\base\allocator\CCAllocatorDiagnostics.cpp" />
     <ClCompile Include="..\base\allocator\CCAllocatorGlobal.cpp" />
     <ClCompile Include="..\base\allocator\CCAllocatorGlobalNewDelete.cpp" />
@@ -978,10 +977,9 @@ xcopy /Y /Q "$(ProjectDir)..\..\external\chipmunk\prebuilt\win32\release-lib\*.*
     <ClInclude Include="..\audio\include\AudioEngine.h" />
     <ClInclude Include="..\audio\include\Export.h" />
     <ClInclude Include="..\audio\include\SimpleAudioEngine.h" />
-    <ClInclude Include="..\audio\win32\AudioCache.h" />
-    <ClInclude Include="..\audio\win32\AudioEngine-win32.h" />
-    <ClInclude Include="..\audio\win32\AudioPlayer.h" />
-    <ClInclude Include="..\audio\win32\MciPlayer.h" />
+    <ClInclude Include="..\audio\desktop\AudioCache.h" />
+    <ClInclude Include="..\audio\desktop\AudioEngine-desktop.h" />
+    <ClInclude Include="..\audio\desktop\AudioPlayer.h" />
     <ClInclude Include="..\base\allocator\CCAllocatorBase.h" />
     <ClInclude Include="..\base\allocator\CCAllocatorDiagnostics.h" />
     <ClInclude Include="..\base\allocator\CCAllocatorGlobal.h" />
