--- a/templates/cpp-template-default/proj.android/AndroidManifest.xml
+++ b/templates/cpp-template-default/proj.android/AndroidManifest.xml
@@ -8,9 +8,14 @@
     <uses-sdk android:minSdkVersion="9"/>
     <uses-feature android:glEsVersion="0x00020000" />
 
+    <!-- _COCOS_VR_ANDROID_MANIFEST_SDK_BEGIN_ -->
+    <!-- _COCOS_VR_ANDROID_MANIFEST_SDK_END_ -->
+    
     <application android:label="@string/app_name"
                  android:icon="@drawable/icon">
-					 
+
+        <!-- _COCOS_VR_ANDROID_MANIFEST_APPLICATION_BEGIN_ -->
+        <!-- _COCOS_VR_ANDROID_MANIFEST_APPLICATION_END_ -->					 
         <!-- Tell Cocos2dxActivity the name of our .so -->
         <meta-data android:name="android.app.lib_name"
                    android:value="MyGame" />
