--- a/templates/cpp-template-default/cocos-project-template.json
+++ b/templates/cpp-template-default/cocos-project-template.json
@@ -24,7 +24,7 @@
                "proj.win10/App/PROJECT_NAME.vcxproj",
                "proj.win10/App/PROJECT_NAME.vcxproj.filters",
                "proj.win10/App/PROJECT_NAME_TemporaryKey.pfx",
-	       "proj.tizen/shared/res/PROJECT_NAME.png"
+	            "proj.tizen/shared/res/PROJECT_NAME.png"
             ]
          },
          "project_replace_project_name":{
@@ -60,7 +60,8 @@
                "proj.win10/App/Package.appxmanifest",
                "CMakeLists.txt",
                "proj.tizen/.project",
-               "proj.tizen/tizen-manifest.xml"
+               "proj.tizen/tizen-manifest.xml",
+               "proj.tizen/project_def.prop"
             ]
          },
          "project_replace_package_name":{
