Update submodule cocos2d-console.

--- a/templates/cpp-template-default/cocos-project-template.json
+++ b/templates/cpp-template-default/cocos-project-template.json
@@ -60,8 +60,7 @@
                "proj.win10/App/Package.appxmanifest",
                "CMakeLists.txt",
                "proj.tizen/.project",
-               "proj.tizen/tizen-manifest.xml",
-               "proj.tizen/project_def.prop"
+               "proj.tizen/tizen-manifest.xml"
             ]
          },
          "project_replace_package_name":{
