--- a/templates/lua-template-default/cocos-project-template.json
+++ b/templates/lua-template-default/cocos-project-template.json
@@ -173,8 +173,7 @@
                 "frameworks/runtime-src/proj.ios_mac/mac/SimulatorApp.mm",
                 "frameworks/runtime-src/proj.ios_mac/PROJECT_NAME.xcodeproj/project.pbxproj",
                 "frameworks/runtime-src/proj.tizen/.project",
-                "frameworks/runtime-src/proj.tizen/tizen-manifest.xml",
-                "frameworks/runtime-src/proj.tizen/project_def.prop"
+                "frameworks/runtime-src/proj.tizen/tizen-manifest.xml"
             ]
         },
         "project_replace_package_name": {
