NodeLoaderLibrary improvements sprite builder cache improvement fix nested prefab loading (+1 squashed commit) Squashed commits: [25a7a07] added CCBXNodeLoaderCache.h to VS project (+1 squashed commit) Squashed commits: [4ceb89c] new variables & selectors assignment system for SpriteBuilder cache system for SpriteBuilder (+1 squashed commit) Squashed commits: [bd60461] added cocos2d namespace (+1 squashed commit) Squashed commits: [14f6163] animation fixes (+1 squashed commit) Squashed commits: [ef4f4b4] assign variables and clicks for easy use (+2 squashed commits) Squashed commits: [6acc25a] log -> CCLOG [50880e4] removed printf

--- a/cocos/2d/libcocos2d.vcxproj
+++ b/cocos/2d/libcocos2d.vcxproj
@@ -577,6 +577,7 @@ xcopy /Y /Q "$(ProjectDir)..\..\external\chipmunk\prebuilt\win32\release-lib\*.*
     <ClCompile Include="..\editor-support\spritebuilder\CCBXNodeGradientLoader.cpp" />
     <ClCompile Include="..\editor-support\spritebuilder\CCBXNodeLoader.cpp" />
     <ClCompile Include="..\editor-support\spritebuilder\CCBXNodeLoaderLibrary.cpp" />
+    <ClCompile Include="..\editor-support\spritebuilder\CCBXNodeLoaderCache.cpp" />
     <ClCompile Include="..\editor-support\spritebuilder\CCBXParser.cpp" />
     <ClCompile Include="..\editor-support\spritebuilder\CCBXParticleSystemQuadLoader.cpp" />
     <ClCompile Include="..\editor-support\spritebuilder\CCBXProgressTimerLoader.cpp" />
@@ -1222,6 +1223,7 @@ xcopy /Y /Q "$(ProjectDir)..\..\external\chipmunk\prebuilt\win32\release-lib\*.*
     <ClInclude Include="..\editor-support\spritebuilder\CCBXNodeColorLoader.h" />
     <ClInclude Include="..\editor-support\spritebuilder\CCBXNodeGradientLoader.h" />
     <ClInclude Include="..\editor-support\spritebuilder\CCBXNodeLoader.h" />
+    <ClInclude Include="..\editor-support\spritebuilder\CCBXNodeLoaderCache.h" />
     <ClInclude Include="..\editor-support\spritebuilder\CCBXNodeLoaderLibrary.h" />
     <ClInclude Include="..\editor-support\spritebuilder\CCBXParser.h" />
     <ClInclude Include="..\editor-support\spritebuilder\CCBXParticleSystemQuadLoader.h" />
