Update property sheet for android vs build
This template should be able to run on arm architecture simulator.
Running android build on visual studio android emulator, which support
only x86 architecture, may not work properly as except. I have test
visual sutdio android emulator with successful build and deploy, but
there are some rendering issue on it, that keep sending glError x0501
x0502 and I haven't figure it out yet.

--- a/templates/cpp-template-default/cocos-project-template.json
+++ b/templates/cpp-template-default/cocos-project-template.json
@@ -25,9 +25,7 @@
                "proj.win10/App/PROJECT_NAME.vcxproj.filters",
                "proj.win10/App/PROJECT_NAME_TemporaryKey.pfx",
 	       "proj.visualstudio/PROJECT_NAME.sln",
-	       "proj.visualstudio/Cocos2d/PROJECT_NAME.androidproj",
-	       "proj.visualstudio/Cocos2dcpp/PROJECT_NAME.vcxproj",
-	       "proj.visualstudio/Cocos2dcpp/PROJECT_NAME.vcxproj.filters",
+	       "proj.visualstudio/Cocos2d/PROJECT_NAME.Android.androidproj",
 	       "proj.tizen/shared/res/PROJECT_NAME.png"
             ]
          },
@@ -62,10 +60,8 @@
                "proj.win10/App/PROJECT_NAME.vcxproj",
                "proj.win10/App/PROJECT_NAME.vcxproj.filters",
                "proj.win10/App/Package.appxmanifest",
-	       "proj.visualstudio/PROJECT_NAME.sln",
-	       "proj.visualstudio/Cocos2d/PROJECT_NAME.androidproj",
-	       "proj.visualstudio/Cocos2dcpp/PROJECT_NAME.vcxproj",
-	       "proj.visualstudio/Cocos2dcpp/PROJECT_NAME.vcxproj.filters",
+               "proj.visualstudio/PROJECT_NAME.sln",
+               "proj.visualstudio/Cocos2d/PROJECT_NAME.Android.androidproj",
                "CMakeLists.txt",
                "proj.tizen/.project",
                "proj.tizen/tizen-manifest.xml"
