Manual bind EventListeners’ create to avoid memory issue

--- a/tools/tojs/cocos2dx.ini
+++ b/tools/tojs/cocos2dx.ini
@@ -114,7 +114,7 @@ skip = Node::[^setPosition$ setGLServerState description getUserObject .*UserDat
         RenderTexture::[listenToBackground listenToForeground saveToFile],
         TextFieldTTF::[(g|s)etDelegate],
         EventListenerVector::[*],
-        EventListener(Touch|Keyboard|Mouse|Focus).*::[create],
+        EventListener(Touch|Keyboard|Mouse|Acceleration|Focus|Custom).*::[create],
         EventTouch::[(s|g)etTouches],
         EventKeyboard::[*],
         Device::[getTextureDataForText],
