Unify function name of Texture2D::releaseTexture

--- a/tools/tojs/cocos2dx.ini
+++ b/tools/tojs/cocos2dx.ini
@@ -162,7 +162,7 @@ rename_functions = SpriteFrameCache::[addSpriteFramesWithFile=addSpriteFrames ge
     LayerColor::[initWithColor=init],
     GLProgramCache::[getGLProgram=getProgram addGLProgram=addProgram reloadDefaultGLPrograms=reloadDefaultShaders loadDefaultGLPrograms=loadDefaultShaders],
     TextFieldTTF::[textFieldWithPlaceHolder=create],
-    Texture2D::[getGLProgram=getShaderProgram setGLProgram=setShaderProgram],
+    Texture2D::[getGLProgram=getShaderProgram setGLProgram=setShaderProgram releaseGLTexture=releaseTexture],
     Speed::[setSpeed=_setSpeed getSpeed=_getSpeed]
 
 rename_classes = ParticleSystemQuad::ParticleSystem,
