--- a/tests/cpp-empty-test/proj.android-studio/app/build.gradle
+++ b/tests/cpp-empty-test/proj.android-studio/app/build.gradle
@@ -15,6 +15,7 @@ android {
             ndkBuild {
                 targets 'cpp_empty_test'
                 arguments 'NDK_MODULE_PATH=../../../..:../../../../cocos:../../../../external'
+                arguments '-j' + Runtime.runtime.availableProcessors()
                 abiFilters 'x86', 'armeabi', 'armeabi-v7a', 'arm64-v8a'
             }
         }
